// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rewards Widget when there are no rewards displays no rewards dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $0
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-smallDialog-73 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-154 makeStyles-title-133"
        >
          <h2
            class="MuiTypography-root-42 MuiTypography-h6-52"
          >
            <h6
              class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
            >
              My Rewards
            </h6>
            <button
              class="MuiButtonBase-root-35 MuiIconButton-root-155 makeStyles-closeButton-140"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-163"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-164"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-91"
              />
            </button>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-173 makeStyles-content-135"
        >
          <div
            class="MuiGrid-root-175 makeStyles-contentGrid-152 MuiGrid-container-176 MuiGrid-spacing-xs-8-205"
          >
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-4-227"
            >
              <div
                class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
              >
                <div
                  class="makeStyles-noRewardsAmount-151"
                >
                  <img
                    alt="rewards icon"
                    class="makeStyles-rewardsIcon-150"
                    src="/assets/icons/rewards-gift.svg"
                  />
                  <div
                    class="MuiBox-root-40 MuiBox-root-280"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
                    >
                      $0.00
                    </h6>
                  </div>
                </div>
                <p
                  class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                >
                  No rewards available.
                </p>
              </div>
            </div>
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-8-231"
            >
              <div
                class="MuiGrid-root-175 makeStyles-moreRewardsSection-142"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-moreRewardsInformation-143 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
                >
                  <div
                    class="MuiGrid-root-175 MuiGrid-item-177"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-moreRewardsDescription-144 MuiGrid-item-177"
                  >
                    <p
                      class="MuiTypography-root-42 MuiTypography-body2-43"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-rewardsGuideLinkContainer-146 MuiGrid-item-177"
                  >
                    <a
                      class="MuiTypography-root-42 MuiLink-root-281 MuiLink-underlineHover-283 makeStyles-rewardsGuide-147 MuiTypography-colorPrimary-65"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-boostRewards-145 MuiGrid-item-177"
                  >
                    <button
                      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-7"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-91"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are no rewards displays zero amount in rewards button 1`] = `
<div>
  <button
    aria-label="open rewards dialog"
    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-7"
    >
      <img
        alt="rewards icon"
        class="makeStyles-rewardsIcon-3"
        src="/assets/icons/rewards-spark.svg"
      />
      <div
        class="MuiBox-root-40 MuiBox-root-41"
      >
        <p
          class="MuiTypography-root-42 MuiTypography-body2-43"
        >
          $0
        </p>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-91"
    />
  </button>
</div>
`;

exports[`Rewards Widget when there are rewards can display user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Rewards User Guide"
        aria-labelledby="user-guide"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-smallDialog-73 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-154 makeStyles-title-325"
        >
          <h2
            class="MuiTypography-root-42 MuiTypography-h6-52"
          >
            <div
              class="MuiBox-root-40 MuiBox-root-334"
            >
              <button
                aria-label="exit guide mode"
                class="MuiButtonBase-root-35 MuiIconButton-root-155 makeStyles-arrowBack-327"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-163"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-164 MuiSvgIcon-fontSizeInherit-170"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17.51 3.87L15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-91"
                />
              </button>
              <h6
                class="MuiTypography-root-42 makeStyles-boldWeight-331 MuiTypography-h6-52"
              >
                Rewards User Guide
              </h6>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-173 makeStyles-content-326"
        >
          <div
            class="MuiGrid-root-175 MuiGrid-container-176"
          >
            <div
              class="MuiGrid-root-175 MuiGrid-item-177"
            >
              <ul
                class="makeStyles-rewardsOptions-330"
              >
                <li>
                  <p
                    class="MuiTypography-root-42 MuiTypography-body2-43"
                  >
                    Staking 50% non native tokens
                  </p>
                </li>
                <li>
                  <p
                    class="MuiTypography-root-42 MuiTypography-body2-43"
                  >
                    Holding and/or Staking 50% BadgerDAO tokens
                  </p>
                </li>
              </ul>
            </div>
            <div
              class="MuiGrid-root-175 makeStyles-tokensSection-333 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-direction-xs-column-179 MuiGrid-grid-xs-12-221"
            >
              <div
                class="MuiGrid-root-175 MuiGrid-item-177"
              >
                <h6
                  class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                >
                  Badger has 3 types of tokens:
                </h6>
              </div>
              <div
                class="MuiGrid-root-175 makeStyles-userGuideTokens-328 MuiGrid-container-176 MuiGrid-spacing-xs-4-201"
              >
                <div
                  class="MuiGrid-root-175 MuiGrid-item-177"
                >
                  <div
                    class="makeStyles-userGuideToken-329"
                  >
                    <p
                      class="MuiTypography-root-42 makeStyles-tokenName-332 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                    >
                      BADGERDAO TOKENS:
                    </p>
                    <h6
                      class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                    >
                      Badger, Digg
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-175 MuiGrid-item-177"
                >
                  <div
                    class="makeStyles-userGuideToken-329"
                  >
                    <p
                      class="MuiTypography-root-42 makeStyles-tokenName-332 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                    >
                      BOOSTED TOKENS:
                    </p>
                    <h6
                      class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                    >
                      ibBTC, crvsBTC LP, imBTC, Mhbtc, Cvxcrv, Tricrypto
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-175 MuiGrid-item-177"
                >
                  <div
                    class="makeStyles-userGuideToken-329"
                  >
                    <p
                      class="MuiTypography-root-42 makeStyles-tokenName-332 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                    >
                      NON-BOOSTED TOKENS:
                    </p>
                    <h6
                      class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                    >
                      All other tokens (e.g. wBTC, renBTC...)
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards can go back from user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-bigDialog-72 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-154 makeStyles-title-335"
        >
          <h2
            class="MuiTypography-root-42 MuiTypography-h6-52"
          >
            <h6
              class="MuiTypography-root-42 makeStyles-titleText-336 MuiTypography-h6-52"
            >
              My Rewards
            </h6>
            <button
              class="MuiButtonBase-root-35 MuiIconButton-root-155 makeStyles-closeButton-342"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-163"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-164"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-91"
              />
            </button>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-173 makeStyles-content-337"
        >
          <div
            class="MuiGrid-root-175 makeStyles-contentGrid-354 MuiGrid-container-176 MuiGrid-spacing-xs-8-205"
          >
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-6-229"
            >
              <div
                class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-optionsContainer-355 MuiGrid-container-176 MuiGrid-item-177"
                >
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-343 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-359"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-155 PrivateSwitchBase-root-371 MuiCheckbox-root-365 makeStyles-checkBox-357 MuiCheckbox-colorPrimary-369 PrivateSwitchBase-checked-372 MuiCheckbox-checked-366 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-374"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-364 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-375"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-358 MuiTypography-h6-52"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-356"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-378"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $3.40513
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-343 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-359"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-155 PrivateSwitchBase-root-371 MuiCheckbox-root-365 makeStyles-checkBox-357 MuiCheckbox-colorPrimary-369 PrivateSwitchBase-checked-372 MuiCheckbox-checked-366 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-374"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-364 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-379"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-358 MuiTypography-h6-52"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-356"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-382"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $2.60968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-343 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-359"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-155 PrivateSwitchBase-root-371 MuiCheckbox-root-365 makeStyles-checkBox-357 MuiCheckbox-colorPrimary-369 PrivateSwitchBase-checked-372 MuiCheckbox-checked-366 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-374"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-364 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-383"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-358 MuiTypography-h6-52"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-356"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-386"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $6.90143
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-387 makeStyles-divider-351"
                />
                <div
                  class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-align-items-xs-center-184 MuiGrid-justify-content-xs-space-between-195"
                >
                  <p
                    class="MuiTypography-root-42 MuiTypography-body2-43"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-40 MuiBox-root-396"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-336 MuiTypography-h6-52"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-175 makeStyles-submitButton-350 MuiGrid-item-177"
                >
                  <button
                    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-7"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-91"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-6-229"
            >
              <div
                class="MuiGrid-root-175 makeStyles-moreRewardsSection-344"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-moreRewardsInformation-345 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
                >
                  <div
                    class="MuiGrid-root-175 MuiGrid-item-177"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-336 MuiTypography-h6-52"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-moreRewardsDescription-346 MuiGrid-item-177"
                  >
                    <p
                      class="MuiTypography-root-42 MuiTypography-body2-43"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-rewardsGuideLinkContainer-348 MuiGrid-item-177"
                  >
                    <a
                      class="MuiTypography-root-42 MuiLink-root-397 MuiLink-underlineHover-399 makeStyles-rewardsGuide-349 MuiTypography-colorPrimary-65"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-boostRewards-347 MuiGrid-item-177"
                  >
                    <button
                      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-7"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-91"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards displays claim options 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-bigDialog-72 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-154 makeStyles-title-133"
        >
          <h2
            class="MuiTypography-root-42 MuiTypography-h6-52"
          >
            <h6
              class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
            >
              My Rewards
            </h6>
            <button
              class="MuiButtonBase-root-35 MuiIconButton-root-155 makeStyles-closeButton-140"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-163"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-164"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-91"
              />
            </button>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-173 makeStyles-content-135"
        >
          <div
            class="MuiGrid-root-175 makeStyles-contentGrid-152 MuiGrid-container-176 MuiGrid-spacing-xs-8-205"
          >
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-6-229"
            >
              <div
                class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-optionsContainer-153 MuiGrid-container-176 MuiGrid-item-177"
                >
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-141 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-281"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-155 PrivateSwitchBase-root-293 MuiCheckbox-root-287 makeStyles-checkBox-279 MuiCheckbox-colorPrimary-291 PrivateSwitchBase-checked-294 MuiCheckbox-checked-288 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-296"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-286 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-297"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-280 MuiTypography-h6-52"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-278"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-300"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $3.40513
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-141 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-281"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-155 PrivateSwitchBase-root-293 MuiCheckbox-root-287 makeStyles-checkBox-279 MuiCheckbox-colorPrimary-291 PrivateSwitchBase-checked-294 MuiCheckbox-checked-288 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-296"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-286 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-301"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-280 MuiTypography-h6-52"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-278"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-304"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $2.60968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-141 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-281"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-155 PrivateSwitchBase-root-293 MuiCheckbox-root-287 makeStyles-checkBox-279 MuiCheckbox-colorPrimary-291 PrivateSwitchBase-checked-294 MuiCheckbox-checked-288 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-296"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-286 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-305"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-280 MuiTypography-h6-52"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-278"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-308"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $6.90143
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-309 makeStyles-divider-149"
                />
                <div
                  class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-align-items-xs-center-184 MuiGrid-justify-content-xs-space-between-195"
                >
                  <p
                    class="MuiTypography-root-42 MuiTypography-body2-43"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-40 MuiBox-root-318"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-175 makeStyles-submitButton-148 MuiGrid-item-177"
                >
                  <button
                    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-7"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-91"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-6-229"
            >
              <div
                class="MuiGrid-root-175 makeStyles-moreRewardsSection-142"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-moreRewardsInformation-143 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
                >
                  <div
                    class="MuiGrid-root-175 MuiGrid-item-177"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-moreRewardsDescription-144 MuiGrid-item-177"
                  >
                    <p
                      class="MuiTypography-root-42 MuiTypography-body2-43"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-rewardsGuideLinkContainer-146 MuiGrid-item-177"
                  >
                    <a
                      class="MuiTypography-root-42 MuiLink-root-319 MuiLink-underlineHover-321 makeStyles-rewardsGuide-147 MuiTypography-colorPrimary-65"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-boostRewards-145 MuiGrid-item-177"
                  >
                    <button
                      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-7"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-91"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards displays rewards amount in rewards button 1`] = `
<div>
  <button
    aria-label="open rewards dialog"
    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-7"
    >
      <img
        alt="rewards icon"
        class="makeStyles-rewardsIcon-3"
        src="/assets/icons/rewards-spark.svg"
      />
      <div
        class="MuiBox-root-40 MuiBox-root-41"
      >
        <p
          class="MuiTypography-root-42 MuiTypography-body2-43"
        >
          $12.92
        </p>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-91"
    />
  </button>
</div>
`;

exports[`Rewards Widget when there are rewards displays success dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claimed Rewards Overview"
        aria-labelledby="claimed-rewards"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-smallDialog-73 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogContent-root-173 makeStyles-content-326"
        >
          <div
            class="MuiGrid-root-175 makeStyles-centeredText-332 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
          >
            <button
              class="MuiButtonBase-root-35 MuiIconButton-root-155 makeStyles-closeButton-334"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-163"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-164"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-91"
              />
            </button>
            <div
              class="MuiGrid-root-175 makeStyles-successIconContainer-329 MuiGrid-item-177"
            >
              <img
                alt="rewards success icon"
                src="/assets/icons/rewards-claim-success.svg"
              />
            </div>
            <h4
              class="MuiTypography-root-42 makeStyles-rewardsTitle-330 MuiTypography-h4-50"
            >
              Rewards Claimed
            </h4>
            <h6
              class="MuiTypography-root-42 MuiTypography-subtitle2-54"
            >
              Rewards claimed for tokens:
            </h6>
            <h6
              class="MuiTypography-root-42 MuiTypography-subtitle2-54"
            >
              BADGER
            </h6>
            <h6
              class="MuiTypography-root-42 MuiTypography-subtitle2-54"
            >
              bveCVX
            </h6>
            <h6
              class="MuiTypography-root-42 MuiTypography-subtitle2-54"
            >
              bCVXCRV
            </h6>
            <button
              class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 makeStyles-goBackButton-333 MuiButton-containedPrimary-15"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-7"
              >
                Go Back To My Rewards
              </span>
              <span
                class="MuiTouchRipple-root-91"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
